# RoomControl

./: .editorconfig  .gitignore  LICENSE  README.md
cad/: control.scad  (+1 more)
software/: CMakeLists.txt  Makefile  build.py  conanfile.py  nrf52Dongle.sh  nrf52dongle.sh  xcode-debug.sh  xcode-emuControl-debug.sh  xcode-emuControl-release.sh  xcode-emuSwitch-debug.sh  xcode-release.sh  xcode.sh
software/board/None/: boardConfig.hpp
software/board/emu/: boardConfig.hpp
software/board/emuControl/: boardConfig.hpp
software/board/emuSwitch/: boardConfig.hpp
software/board/nrf52Dongle/: boardConfig.hpp  link.ld
software/board/nrf52dongle/: boardConfig.hpp
software/board/switch/: boardConfig.hpp  link.ld
software/control/: ArrayList.hpp  Bitmap.cpp  Bitmap.hpp  ClockTime.hpp  Flash.hpp  Font.cpp  Font.hpp  MqttSnBroker.hpp  MqttSnClient.hpp  RoomControl.cpp  RoomControl.hpp  Storage.cpp  Storage.hpp  String.hpp  StringOperators.hpp  SystemTime.hpp  TopicBuffer.cpp  convert.cpp  defines.hpp  tahoma_8pt.cpp  tahoma_8pt.hpp
software/control/src/: AlarmInterface.cpp  AlarmInterface.hpp  BME680.cpp  BME680.hpp  BusInterface.cpp  BusInterface.hpp  Configuration.hpp  Device.hpp  FunctionInterface.cpp  FunctionInterface.hpp  Interface.cpp  Interface.hpp  LocalInterface.cpp  LocalInterface.hpp  Makefile  Menu.cpp  Menu.hpp  Message.cpp  Message.hpp  RadioInterface.cpp  RadioInterface.hpp  RoomControl.cpp  RoomControl.hpp  SSD1309.cpp  SSD1309.hpp  State.cpp  Storage.cpp  Storage.hpp  Storage2.hpp  SwapChain.cpp  SwapChain.hpp  appConfig.hpp  display.hpp  main.cpp  poti.hpp  spi.hpp
software/control/src/emu/: BusDevices.cpp  BusDevices.hpp  Clock.cpp  Clock.hpp  Display.cpp  Display.hpp  Gui.cpp  Gui.hpp  Network.cpp  Network.hpp  Poti.hpp  SystemTimer.cpp  SystemTimer.hpp  bus.cpp  config.hpp  display.cpp  main.cpp  poti.cpp  radio.cpp  spi.cpp  sysConfig.hpp
software/control/src/nrf52/: config.hpp  display.cpp  poti.cpp  spi.cpp
software/control/test/: BME680Test.cpp  SSD1309Test.cpp  StorageTest.cpp  bme680Test.cpp  displayTest.cpp  potiTest.cpp  spiTest.cpp  ssd1309Test.cpp  storageTest.cpp
software/control/test/emu/: config.hpp  sysConfig.hpp
software/control/test/nrf52/: Makefile  config.hpp  sysConfig.hpp
software/crypt/src/: DataBuffer.hpp  crypt.cpp  crypt.hpp  hash.cpp  hash.hpp
software/crypt/test/: cryptTest.cpp
software/emulator/: Bus.cpp  Bus.hpp  Clock.cpp  Clock.hpp  Flash.cpp  Gui.cpp  Gui.hpp  Network.cpp  Network.hpp  Poti.cpp  SystemTimer.hpp  config.hpp  global.cpp  global.hpp  main.cpp
software/glad/: glad.c  glad.h
software/network/src/: DataBuffer.hpp  DataReader.hpp  DataWriter.hpp  Nonce.hpp  PacketReader.hpp  PacketWriter.hpp  crypt.hpp  gp.hpp  hash.hpp  ieee.hpp  zb.hpp
software/network/test/: cryptTest.cpp
software/node/src/: ArrayStorage.cpp  ArrayStorage.hpp  ClockTime.hpp  Configuration.hpp  FeRamCounters.cpp  FeRamCounters.hpp  Message.cpp  Message.hpp  MqttSnBroker.cpp  MqttSnBroker.hpp  MqttSnClient.cpp  MqttSnClient.hpp  Publisher.hpp  State.cpp  State.hpp  Storage.cpp  Storage.hpp  Storage2.cpp  Subscriber.cpp  Subscriber.hpp  Usage.generated.hpp  assert.hpp  bus.hpp  calendar.hpp  clock.hpp  debug.hpp  flash.hpp  functions.generated.cpp  radio.hpp  spi.hpp  system.hpp  timer.hpp  usb.hpp
software/node/src/emu/: calendar.cpp  global.cpp  global.hpp  spi.cpp  timer.cpp
software/node/src/nrf52/: bus.cpp  calendar.cpp  clock.cpp  debug.cpp  global.hpp  radio.cpp  spi.cpp  system.cpp  timer.cpp  util.hpp
software/node/test/: MqttSnBrokerTest.cpp  MqttSnClientTest.cpp  appConfig.hpp  brokerTest.cpp  busTest.cpp  greenPowerTest.cpp  nodeTest.cpp  spiTest.cpp  systemTest.cpp  terminal.cpp  timerTest.cpp  usbTest.cpp  usbTestHost.cpp
software/node/test/nrf52/: Makefile  config.hpp
software/protocol/src/: DataBuffer.hpp  DataReader.hpp  DataWriter.hpp  MessageReader.hpp  MessageWriter.hpp  Nonce.hpp  PlugType.generated.hpp  bt.hpp  bus.cpp  bus.hpp  crc.cpp  crc.hpp  crypt.cpp  crypt.hpp  dns.hpp  hash.cpp  hash.hpp  ieee.hpp  mqttsn.hpp  pcap.hpp  types.py  usb.hpp  zb.cpp  zb.hpp  zcl.hpp
software/protocol/test/: cryptTest.cpp  protocolTest.cpp
software/switch/src/: appConfig.hpp  main.cpp
software/system/src/: Ble.hpp  BusMaster.cpp  BusMaster.hpp  BusNode.cpp  BusNode.hpp  Calendar.hpp  ClockTime.hpp  Debug.hpp  FeRamCounters.cpp  FeRamCounters.hpp  FeRamStorage4.cpp  FeRamStorage4.hpp  Flash.cpp  Flash.hpp  FlashStorage.cpp  FlashStorage.hpp  Input.hpp  Loop.hpp  Network.hpp  Output.hpp  Poti.hpp  QuadratureDecoder.cpp  QuadratureDecoder.hpp  Radio.hpp  RadioDefs.hpp  Random.hpp  Sound.hpp  Spi.hpp  SpiMaster.cpp  SpiMaster.hpp  Storage.cpp  Storage.hpp  Storage2.cpp  Storage2.hpp  SystemTime.hpp  Terminal.hpp  Timer.hpp  Usb.hpp  UsbDefs.hpp  UsbDevice.cpp  (+22 more)
software/system/test/: BleTest.cpp  BusMasterTest.cpp  BusNodeTest.cpp  CalendarTest.cpp  DisplayTest.cpp  FlashTest.cpp  InputTest.cpp  LoopTest.cpp  NetworkTest.cpp  PotiTest.cpp  QuadratureDecoderTest.cpp  RadioTest.cpp  RandomTest.cpp  SoundTest.cpp  SpiMasterTest.cpp  SpiTest.cpp  StorageTest.cpp  TimerTest.cpp  UsbDeviceTest.cpp  UsbTest.cpp  UsbTestHost.cpp  appConfig.hpp  busTest.cpp  calendarTest.cpp  displayTest.cpp  networkTest.cpp  potiTest.cpp  radioSendTest.cpp  radioTest.cpp  rngTest.cpp  spiTest.cpp  systemTest.cpp  timerTest.cpp  usbTest.cpp  usbTestHost.cpp
software/tools/src/: appConfig.hpp  ieeeSniffer.cpp  mdnsSniffer.cpp  radioDevice.cpp  sniffer.cpp  terminal.cpp
software/util/src/: Array.hpp  ArrayList.hpp  BitField.hpp  Bitmap.cpp  Bitmap.hpp  Cie1931.cpp  Cie1931.hpp  Coroutine.hpp  Coroutine2.hpp  Data.hpp  DataBuffer.hpp  DataQueue.hpp  DrawMode.hpp  IsSubclass.hpp  LinkedList.hpp  LinkedListNode.hpp  Pointer.hpp  Queue.hpp  Stream.cpp  Stream.hpp  String.hpp  StringBuffer.hpp  StringHash.hpp  StringOperators.hpp  StringSet.hpp  TopicBuffer.cpp  TopicBuffer.hpp  assert.hpp  convert.cpp  convert.hpp  crypt.cpp  crypt.hpp  defines.hpp  enum.hpp  optional.hpp  util.hpp
software/util/test/: cryptTest.cpp  main.cpp  utilTest.cpp
(+246 files in other folders)
